	`newdata' are handled (and defaults to predicting NA).
	[Previously the value of getOption("na.action") was used and
	this by default omitted cases with missing values, even if set
	to `na.exclude'.]

    o	print.summary.glm() now reports omitted coefficients in the
	same way as print.summary.lm(), and both show them as NAs in
	the table of coefficients.

    o	rank(x, na.last = "keep") now preserves NAs in `x', and the
	argument `ties.method' allows to use non-averaging ranks in the
	presence of ties.

    o	read.table()'s 'as.is' argument can be character, naming columns
	not to be converted.

    o	rep() is now a generic function, with default, POSIXct and
	POSIXlt methods.  For efficiency, the base code uses rep.int()
	rather than rep() where possible.

    o	New function replicate() for repeated evaluation of expression
	and collection of results, wrapping a common use of sapply()
	for simulation purposes.

    o	rev() is now a generic function, with default and dendrogram
	methods.

    o	sort(method = "quick", decreasing = TRUE) is now implemented.

    o	sort.list() has methods "quick" (a wrapper for sort(method =
	"quick", index.return = TRUE) and "radix" (a very fast method
	for small integers).  The default "shell" method works faster
	on long vectors with many ties.

    o	stripchart() now has `log', `add' and `at' arguments.

    o	strsplit(x, *) now preserves names() but won't work for
	non-character `x' anymore {formerly used as.character(x),
	destroying names(x)}.

    o	Using UseMethod() with more than two arguments now gives a
	warning (as R-lang.texi has long claimed it did).

    o	New function vignette() for viewing or listing vignettes.

    o	which.min(x) and which.max(x) now preserve names.

    o	xy.coords() coerces "POSIXt" objects to "POSIXct", allowing
	lines etc to added to plot.POSIXlt() plots.

    o	.Machine has a new entry, sizeof.pointer.

    o	.Random.seed is only looked for and stored in the user's